[package]
name = "joyn"
description = "Join input files. Create one thread for each input file that reads a line, and write a line each time any thread reads it."
version = "0.2.4"
edition = "2021"
authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/tos-kamiya/joyn"
keywords = ["cli", "utility", "pipe", "parallel execution"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[profile.release]
lto = true
